Alterações no site

--- a/site magic show.html
+++ b/site magic show.html
@@ -86,7 +86,7 @@
     <li> <a href="https://www.instagram.com/dfideliz/" target="_blank">Defideliz </a></li>
     <li> <a href="https://www.instagram.com/levianinn/" target="_blank">leviano </a></li>
     <li> <a href="https://www.instagram.com/og.azinho/" target="_blank">G.A </a></li>
-    <li>Mc Luanna</li>
+    <li> <a href="https://www.instagram.com/mcluanna_/" target="_blank">Mc Luanna</a></li>
     <li>Cjota</li>
     <li>Tz da coronel</li>
     <li>Yunk Vino</li>
