--- a/Magic Album.html
+++ b/Magic Album.html
@@ -25,6 +25,10 @@
         a{
             color: rgb(13, 2, 22);
         }
+        footer{
+            color: rgb(7, 1, 14);
+            border-top-style: initial;
+        }
         
 
 
@@ -82,7 +86,7 @@
     <li> <a href="https://www.instagram.com/dfideliz/" target="_blank">Defideliz </a></li>
     <li> <a href="https://www.instagram.com/levianinn/" target="_blank">leviano </a></li>
     <li> <a href="https://www.instagram.com/og.azinho/" target="_blank">G.A </a></li>
-    <li>Mc Luanna</li>
+    <li> <a href="https://www.instagram.com/mcluanna_/" target="_blank">Mc Luanna</a></li>
     <li>Cjota</li>
     <li>Tz da coronel</li>
     <li>Yunk Vino</li>
